# ACE

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  lrdepend.cpp
include/ACE/: Timer.hpp
include/ACE/device/: Allocator.hpp  Device.hpp  Kernel.hpp  MemoryHandle.hpp  MemoryResource.hpp  Scheduler.hpp  SchedulerInterface.hpp  Types.hpp
include/ACE/device/numa/: Device.hpp  Kernel.hpp  MemoryResource.hpp  Scheduler.hpp
include/ACE/device/opencl/: Device.hpp  Executor.hpp  Executor_impl.hpp  Kernel.hpp  MemoryResource.hpp  Scheduler.hpp
include/ACE/schedule/: Executor.hpp  Executor_impl.hpp  Schedule.hpp  Schedule_impl.hpp
include/ACE/task/: Executable.hpp  PostCondition.hpp  PreCondition.hpp  Task.hpp  TaskDef.hpp
include/ACE/thread/: Barrier.hpp  Exception.hpp  LockGuard.hpp  Macros.hpp  Mutex.hpp  PinningMode.hpp  Pool.hpp  Thread.hpp
include/ACE/utility/: LockGuard.h  Macros.hpp  Optional.hpp
src/: CMakeLists.txt  Documenation.hpp  Lock.h  ScheduleExecuter.cpp  ScheduleExecuter.h  Thread.cpp  ThreadPool.cpp  ThreadPool.hpp  Timer.hpp  scheduler_Executable.h  scheduler_PostCondition.h  scheduler_PreCondition.h  scheduler_ProgressBar.h  scheduler_Schedule.cpp  scheduler_Schedule.h  scheduler_Table.h  scheduler_Task.h  scheduler_TaskDef.h  scheduler_Thread.cpp  scheduler_Threading.h  scheduler_Timers.cpp  scheduler_Timers.h  scheduler_documentation.h
src/device/: Device.cpp  MemoryResource.cpp  Types.cpp
src/device/numa/: Device.cpp  MemoryResource.cpp  Scheduler.cpp
src/device/opencl/: Device.cpp  MemoryResource.cpp  Scheduler.cpp
src/old/: scheduler_State.h  scheduler_Table.cpp  scheduler_Thread.h  scheduler_Threading.cpp  scheduler_TimeDirection.h  scheduler_TimestampLogger.h
src/schedule/: Executor.cpp  Executor.hpp  Schedule.cpp  Schedule.hpp
src/task/: Executable.hpp  PostCondition.hpp  PreCondition.hpp  Task.hpp  TaskDef.hpp
src/thread/: Barrier.cpp  Barrier.hpp  Exception.cpp  Exception.hpp  LockGuard.cpp  Macros.hpp  Mutex.cpp  Mutex.hpp  PinningMode.hpp  Pool.cpp  Pool.hpp  Thread.cpp  Thread.hpp
src/utility/: LockGuard.cpp  LockGuard.h  Optional.hpp
tests/: CMakeLists.txt  DeviceTest.cpp  MemoryResourceTest.cpp  OpenClDeviceTest.cpp  run_tests.cpp
